--- a/root/caddy/www/index.html
+++ b/root/caddy/www/index.html
@@ -1,6 +1,6 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 	<title>
-		acrossgw.info
+		DirectAdmin
 	</title>
 
 	<style>
@@ -15,15 +15,18 @@
 <center>
 <br><br><br><br>
 	<table>
-	<tbody><tr><td>Welcome to the home of <b>acrossgw.info</b></td></tr>
+	<tbody><tr><td>Welcome to the home of <b>DirectAdmin</b></td></tr>
 	<tr><td>To change this page, upload your website into the public_html directory</td></tr>
 	<tr><td><img src="./logo.png"></td></tr>
-	<tr><td style="font-size: 8pt">Date Created: Sat Apr  4 05:04:33 2020</td></tr>
+	<tr><td style="font-size: 8pt">
+	    <script type="text/javascript">
+            var myDate = new Date();
+            document.write(myDate.toLocaleString())
+        </script>
+    </td></tr>
 	</tbody></table>
 <br><br>
 
 </center>
-
-
 
 </body></html>
